--- a/ely.html
+++ b/ely.html
@@ -14,7 +14,8 @@
 <body>
 
         <h1> Datos de Elisabeth Macedonio Lorenzo (Ely) </h1>
-
+<hr>
+<img src="1.JPG" alt="" style=" width:200px; height:200px"/>
 <h3>
 Nombre: Elisabeth</h3>
 <h3>Apellido paterno: Macedonio</h3>
