barra de titulo

--- a/ely.html
+++ b/ely.html
@@ -8,7 +8,16 @@
 
 
 </style>
+<div id="menu">
+                
+                    <a href="#" id="principal" class="activo"> Ely</a>
+                    <a href="#" id="mlink" class="activo" > Eddy </a>
+                    <a href="#" id="mlink" class="activo" > Alvaro </a>
+                    <a href="#" id="mlink" class="activo" > Antonio </a>
+                    <a href="#" id="mlink" class="activo" > Oscar </a>
 
+
+            </div>
 </head>
 
 <body>
