--- a/ely.html
+++ b/ely.html
@@ -101,6 +101,11 @@ Nombre: Elisabeth</h3>
 <h3>Ciudad: Riva palacio</h3>
 <h3>Codigo Postal: c/n </h3>
 </div> 
+
+<footer id="pie">
+            <b style="color: white">Biografia de Elisabeth</b> [Elisabeth Macedonio Lorenzo] <b style="color: white">Biogrfia de Elisabeth</b>
+            
+        </footer>
 </body>
 
 </html>
